--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "appointment-creator",
   "version": "1.0.0",
   "description": "Huge Freelance code challenge",
-  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -18,7 +16,17 @@
   },
   "homepage": "https://github.com/elkinjosetm/appointment-creator#readme",
   "dependencies": {
-    "express": "^4.15.2",
-    "serve-static": "^1.12.1"
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
+    "browserify": "^14.3.0",
+    "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.0.4",
+    "gulp-concat-css": "^2.3.0",
+    "gulp-connect": "^5.0.0",
+    "gulp-sourcemaps": "^2.6.0",
+    "gulp-task-loader": "^1.4.4",
+    "gulp-uglify": "^2.1.2",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
